2004-10-21 Derek Price <derek@ximbiot.com>

	* main.c: #include strftime.h.
	(format_time_t, gmformat_time_t): Supply missing args to my_strftime.

2004-10-21 Derek Price <derek@ximbiot.com>

	* buffer.c: Don't maintain last_index & last_count for buffers.
	* buffer.h (struct buffer): Update struct.
	(buf_initialize): Update proto.
	* log-buffer.c, ms-buffer.c, zlib.c: Update all callers.

2004-10-21 Derek Price <derek@ximbiot.com>

	* sanity.sh: Fail gracefully in proxy mode when rsync is defective.
	(depends_on_rsync): New function.
	(writeproxy, writeproxy-noredirect, writeproxy-ssh): Skip these tests
	gracefully when rsync is missing.
	
2004-10-21  Mark D. Baushke  <mdb@cvshome.org>

	* add.c (add): Pay attention to cvswrite mode when resurrecting a
	file that was not yet committed.
	(Report from Frank Hemer <frank@hemer.org>.)
	* sanity.sh (resurrection): Add new tests to deal with read-only
	mode on a cvs add durring a resurrection. Verify that -r is not
	honored when the resurrected file must be committed to be seen.

2004-10-21 Derek Price <derek@ximbiot.com>

	* ls.c (ls_fileproc): Deal with files specified on the command line.
	(ls_delproc): Move to a more accessible location.

2004-10-20 Derek Price <derek@ximbiot.com>

	* add.c (add): Avoid unnecessary typecast.

2004-10-20  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerate for new configure.in.

2004-10-19  Mark D. Baushke  <mdb@cvshome.org>

	* add.c (add): Backout last typecasts cleanup.

2004-10-19 Derek Price <derek@ximbiot.com>

	* add.c (add): Avoid attempting to resurrect a dead rev 1.1.
	* sanity.sh (resurrection): Add test for the above.
	(Report from Dan Peterson <dbpete@aol.com>.)

2004-10-19 Derek Price <derek@ximbiot.com>

	* add.c (add): Avoid unnecessary typecasts.

2004-10-19 Derek Price <derek@ximbiot.com>

	* cvs.h: Prototype new function.
	* subr.c (Xasnprintf): New function.
	* root.c (primary_root_translate, primary_root_inverse_translate):
	s/asnprintf/Xasnprintf/.